--- a/NursingDocumentTracker/MainStoryboard.storyboard
+++ b/NursingDocumentTracker/MainStoryboard.storyboard
@@ -325,29 +325,29 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="YyO-Fo-mnz" kind="relationship" relationship="rootViewController" id="G9z-VN-Tpq"/>
+                        <segue destination="JQd-Qz-5Dl" kind="relationship" relationship="rootViewController" id="7fH-bv-Ih2"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rw2-yh-rWZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1220" y="1287"/>
         </scene>
-        <!--View Controller - Calendar-->
-        <scene sceneID="FO6-e4-WnX">
+        <!--Calendar View Controller-->
+        <scene sceneID="asc-2W-cPF">
             <objects>
-                <viewController id="YyO-Fo-mnz" customClass="CKViewController" sceneMemberID="viewController">
+                <viewController id="JQd-Qz-5Dl" customClass="NDTCalendarViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="4J4-ZW-DDi"/>
-                        <viewControllerLayoutGuide type="bottom" id="TsX-mJ-xm8"/>
+                        <viewControllerLayoutGuide type="top" id="T9i-TG-5B5"/>
+                        <viewControllerLayoutGuide type="bottom" id="Tvt-Tt-pjl"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="F4a-BF-XTh">
+                    <view key="view" contentMode="scaleToFill" id="x6T-2F-bWd">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Calendar" id="I7P-Fn-hML"/>
+                    <navigationItem key="navigationItem" id="jQA-98-hTg"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jZN-WX-kSp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xh8-9k-fl7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1718" y="1287"/>
         </scene>
